# pythonboilerplate

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: action_test.yml  pyproject.toml  scheduled_sync.yml  workflow.yml
.github/workflows/projmr/: scheduled_sync.yml
.github/workflows/projmr/src/projmr/: cli.py
.github/workflows/src/projmr/: cli.py
python_boilerplate/: __init__.py
src/pythonboilerplate/: __init__.py  func.py
tests/: __init__.py  conftest.py  test_python_boilerplate.py  test_pythonboilerplate.py
