[tool.poetry]
name                       = "projmr"
version                    = "0.1.0"
description                = "pyproject.toml を merge するやつ"
authors                    = [
    "Naoki Aoyama"
]
license                    = "AGPL-3.0"

[tool.poetry.dependencies]
python                     = "~3.8"
tomlkit                    = "~0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
projmrcli = "projmr.cli:main"

[tool.black]
line-length                = 99
exclude                    = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.coverage]
[tool.coverage.run]
branch                     = true
command_line               = "-m pytest"

[tool.isort]
include_trailing_comma     = true
line_length                = 99
force_single_line          = true
force_sort_within_sections = true

[tool.pytest]
[tool.pytest.ini_options]
minversion                 = "6.0"
addopts                    = [
    "-r sfp",
    "--verbose",
    "--verbose",
    "--durations=0",
    "--cov=src",
    "--cov=tests",
    "--cov-report=term",
    "--cov-report=term-missing",
    "--cov-report=term-missing",
    "--cov-report=xml"
]

[build-system]
requires                   = [
    "poetry-core>=1.0.0",
    "setuptools",
]
build-backend              = "poetry.core.masonry.api"
